--- a/web/resources/i18n/zh_CN.properties
+++ b/web/resources/i18n/zh_CN.properties
@@ -126,7 +126,7 @@ page.title.login = 登录
 email.register.new = 新用户注册
 email.register.welcome = 感谢您注册{0}，请点击下面的链接访问我们
 email.register.sorry = 若您没有在{0}平台填写过注册信息，说明有人使用了您的电子邮箱，请删除此邮件，我们对给您造成的打扰感到抱歉。
-email.register.sincerely = {0}平台 谨上。
+email.register.sincerely = {0} 谨上。
 email.register.resetPassword = 我们收到您在{0}平台重置密码的请求，请在24小时内单击下面的链接来重置密码：
 email.register.resetLink = 重置密码链接
 email.task.taskInfo = 任务信息
