--- a/web/resources/i18n/en_US.properties
+++ b/web/resources/i18n/en_US.properties
@@ -91,7 +91,7 @@ page.admin.tasklist = Tasks
 
 page.task.status.waiting = waiting
 page.task.status.running = running
-page.task.status.success = success
+page.task.status.passed = passed
 page.task.status.failed = failed
 page.task.status.closed = closed
 page.task.timer = Timer
