--- a/web/resources/i18n/zh_CN.properties
+++ b/web/resources/i18n/zh_CN.properties
@@ -91,7 +91,7 @@ page.admin.tasklist = 任务列表
 
 page.task.status.waiting = 排队
 page.task.status.running = 进行中
-page.task.status.success = 成功
+page.task.status.passed = 通过
 page.task.status.failed = 失败
 page.task.status.closed = 关闭
 page.task.timer = 执行周期
