Support environment variable (#28)
* tweak container (#20)

* tweak container

* clean up script

* tweak scripts

* tweak dockerfile

* Add chart

* tweak container (#20)

* tweak container

* clean up script

* tweak scripts

* tweak dockerfile

* Add chart

* fix lint

* support-environment-variable

* tweak code style

--- a/web/resources/i18n/en_US.properties
+++ b/web/resources/i18n/en_US.properties
@@ -18,6 +18,7 @@ page.global.tokenExpiredTip = Password reset token is invalid or has expired.
 page.global.title = Title
 page.global.content = Content
 page.global.description = Description
+page.global.commitInfo = CommitInfo
 page.global.author = Author
 page.global.editor = Editor
 page.global.status = Status
@@ -27,6 +28,9 @@ page.global.submit = Submit
 page.global.cancel = Cancel
 page.global.operate = Operate
 page.global.tips = Tips
+page.global.envkey = Name
+page.global.envvalue = Value
+page.global.environment = Environment
 page.global.device = Device
 page.global.body = Body
 page.global.repo = Repository
@@ -42,6 +46,7 @@ page.global.repository = Repository
 page.global.history = history
 page.global.open = open
 page.global.close = close
+page.global.add = Add
 page.global.clean = Clean waiting tasks
 page.global.dep = dep
 page.global.hour = Hour
@@ -98,6 +103,8 @@ page.task.timer = Timer
 page.task.retry = Retry
 page.task.createtask = New Task
 page.task.edittask = Edit Task
+page.task.inputenvvalue = environment value
+page.task.inputenvname = environment name
 page.task.inputtasktitle = please input task title
 page.task.inputtaskdescription = please input task description [unnecessary]
 page.task.inputprojectrepositoryurl = please input repository url
