--- a/web/resources/i18n/zh_CN.properties
+++ b/web/resources/i18n/zh_CN.properties
@@ -22,6 +22,8 @@ page.global.author = 作者
 page.global.editor = 最后编辑
 page.global.status = 状态
 page.global.confirm = 确认
+page.global.commitInfo = 提交信息
+page.global.environment = 环境变量
 page.global.username = 用户名
 page.global.submit = 提交
 page.global.cancel = 取消
@@ -31,6 +33,9 @@ page.global.device = 设备
 page.global.body = 内容
 page.global.repo = 仓库
 page.global.branch = 分支
+page.global.add = 添加
+page.global.envkey = 名称
+page.global.envvalue = 值
 page.global.type = 类型
 page.global.nexttimer = 下次执行时间
 page.global.createdate = 创建时间
@@ -98,6 +103,8 @@ page.task.timer = 执行周期
 page.task.retry = 重试
 page.task.createtask = 创建新任务
 page.task.edittask = 编辑任务
+page.task.inputenvvalue = 请输入环境变量值
+page.task.inputenvname = 请输入环境变量名称
 page.task.inputtasktitle = 请填写任务标题
 page.task.inputtaskdescription = 请填写任务描述[非必填]
 page.task.inputprojectrepositoryurl = 请输入测试仓库地址
